sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:75: error: not found: value JB2
  move(JB2,JP2)
       ^SelectBaseball:75: error: not found: value JP2
  move(JB2,JP2)
           ^